@@ -2,6 +2,7 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.4.4 to v2.4.5
+- -nodeh option to disable automatic loading of an dehacked-in-wad lump
 
 Changes from v2.4.3 to v2.4.4
 - Don't fail when a texture name can't be looked up
